testsuite/tests/grammar/invalid_synthetic_parser/test.out
== List ==
list.lkt:4:47: error: Parsers cannot create synthetic nodes
3 |     @main_rule main_rule <- Example("example" ListSynthExample+("example"))
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== Null ==
null.lkt:4:29: error: Parsers cannot create synthetic nodes
3 |     @main_rule main_rule <- Example("example" null(SynthExample))
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== Skip ==
skip.lkt:4:52: error: Unknown node: SynthExapmle
3 |     @main_rule main_rule <- Example("example" skip(SynthExapmle))
  |                                                    ^^^^^^^^^^^^


== Transform ==
transform.lkt:4:29: error: Parsers cannot create synthetic nodes
3 |     @main_rule main_rule <- Example("example" SynthExample())
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Done
